--- a/wear/src/main/res/layout/rect_activity_top.xml
+++ b/wear/src/main/res/layout/rect_activity_top.xml
@@ -7,9 +7,8 @@
     tools:context=".TopActivity"
     tools:deviceIds="wear_square">
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_square" />
+    <ListView
+        android:id="@+id/app_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
